2009-07-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Add comment for the previous change..

2009-07-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Add empty cells to ListView grid to prevent spanning of unfinished rows..

2009-07-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Disable calendar widget invocation for disabled fields in HTML forms..

2009-07-13  Tomas Cerha  <cerha@brailcom.org>

	* translations/pytis.cs.po:
	* translations/pytis.de.po:
	* translations/pytis.es.po:
	* translations/pytis.fr.po:
	* translations/pytis.hu.po:
	* translations/pytis.pl.po:
	* translations/pytis.sk.po:
	Translations updated..

2009-07-13  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Use dynamic calendar widget for date entry in HTML forms..

2009-07-02  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/web/form.py:
	Documentation extended..

2009-07-02  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Customize BrowseForm limits for embeddable pytis modules..

2009-07-02  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Allow variable substitution also in embedded module's content..

2009-07-02  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/form.py:
	Fixed input data validation within interactive import..

2009-07-02  Tomas Cerha  <cerha@brailcom.org>

	* INSTALL:
	* Makefile:
	CVS specific installation Makefile setup generalized..

2009-07-01  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/cms/web.py:
	Pytis CMS: Added generic support for variable substitution in CMS texts..

2009-06-30  Tomas Cerha  <cerha@brailcom.org>

	* lib/pytis/form/screen.py:
	Adjust status fields witdh automatically to fit the displayed text..

2009-06-30  Tomas Cerha  <cerha@brailcom.org>

	* db/db_pytis_cms.py:
	* lib/pytis/cms/cms.py:
	* lib/pytis/cms/web.py:
	Pytis CMS: Allow using longer title for page heading and shorter for menu item..
