@@ -1,3 +1,8 @@
+2009-07-14  Tomas Cerha  <cerha@brailcom.org>
+
+	* lib/pytis/cms/web.py:
+	Pytis CMS: Respect changes in Wiking 'module_uri()' API..
+
 2009-07-13  Tomas Cerha  <cerha@brailcom.org>
 
 	* lib/pytis/web/form.py:
